--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,4 +30,4 @@ jobs:
         poetry install
     - name: Test with pytest
       run: |
-        pytest tests/test_simppl.py
+        poetry run pytest
