--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scipy = "^1.5.3"
 matplotlib = "^3.3.2"
 pandas = "^1.1.3"
 tqdm = "^4.50.2"
+pytest = "^6.1.1"
 
 [tool.poetry.dev-dependencies]
 scikit-learn = "^0.23.2"
